@@ -39,13 +39,13 @@ namespace BDArmory.Settings
 		};
         public static readonly Dictionary<string, float> vesselChecks = new()
         {
-				//{"maxStacking", -1}, //wing Stacking %. No limit if -1
-                //{"maxPartCount", -1}, //part count. no limit if -1
-                //{"maxLtW", -1},        //Lift-to-Weight ratio. -1 for no limit   
-                //{"maxTWR", -1},        //Thrust-Weight ratio. -1 for no limit   
-                //{"maxEngines", -1},
-                //{"maxMass", -1},
-                //{"pointBuyBudget", -1}, //for comps with point buy systems for limiting armament/etc. if enabled, will check parts against partPointCosts
+				{"maxStacking", -1}, //wing Stacking %. No limit if -1
+                {"maxPartCount", -1}, //part count. no limit if -1
+                {"maxLtW", -1},        //Lift-to-Weight ratio. -1 for no limit   
+                {"maxTWR", -1},        //Thrust-Weight ratio. -1 for no limit   
+                {"maxEngines", 999},    //set to negative to mandate that number of engines on the craft
+                {"maxMass", -1},
+                {"pointBuyBudget", -1}, //for comps with point buy systems for limiting armament/etc. if enabled, will check parts against partPointCosts
 		};
         public static readonly Dictionary<string, float> partPointCosts = new()
         {
@@ -70,16 +70,24 @@ namespace BDArmory.Settings
                 return;
             }
             ConfigNode fileNode = ConfigNode.Load(CompSettingsPath);
-            if (fileNode.HasNode("AIWMChecks"))
+
+            string settingsComment = "Settings overrides for AI/WM settings for competition rules compliance. Use -1 to disable override of that setting at competition start. MONO/DUALCOCKPIT settings set single-seat and 2+ seat cockpit view range. DISABLE_SAS uses 0/1 for False/True ";
+            if (!fileNode.HasNode("AIWMChecks"))
             {
-                CompOverridesEnabled = true;
+                fileNode.AddNode("AIWMChecks", settingsComment);
+            }
+            if (fileNode.HasNode("AIWMChecks"))
+            {                
                 ConfigNode settings = fileNode.GetNode("AIWMChecks");
 
                 foreach (ConfigNode.Value fieldNode in settings.values)
                 {
                     if (float.TryParse(fieldNode.value, out float fieldValue))
+                    {
                         CompOverrides[fieldNode.name] = fieldValue; // Add or set the override.
-                }
+                        if ((fieldNode.name == "DISABLE_SAS" && fieldValue > 0) || fieldValue >= 0) CompOverridesEnabled = true;
+                    }
+                }                
                 if (BDArmorySettings.DEBUG_OTHER)
                 {
                     Debug.Log($"[BDArmory.CompSettings]: Comp AI/WM overrides loaded");
@@ -91,14 +99,22 @@ namespace BDArmory.Settings
             }
             if (fileNode.HasNode("VesselChecks"))
             {
-                CompVesselChecksEnabled = true;
-                ConfigNode settings = fileNode.GetNode("VesselChecks");
+                string VCComment = "Set construction rule limits here. maxStacking is Wing Stacking% in the SPH/VAB BDA Utilities Tool GUI. Use -1 for no limit for the respective field. Setting maxEngines to a negative number will mandate a minimum engine count, e.g. maxEngines = -2 requires 2+ engines on the craft."; // Note: reading the node doesn't seem to get the comment, so we need to reset it each time.
 
+                if (!fileNode.HasNode("VesselChecks"))
+                {
+                    fileNode.AddNode("VesselChecks", VCComment);
+                }
+                ConfigNode settings = fileNode.GetNode("VesselChecks");
                 foreach (ConfigNode.Value fieldNode in settings.values)
                 {
                     if (float.TryParse(fieldNode.value, out float fieldValue))
+                    {
                         vesselChecks[fieldNode.name] = fieldValue; // Add or set the override.
+                        if ((fieldNode.name != "maxEngines" && fieldValue > 0) || fieldValue != 999) CompVesselChecksEnabled = true;
+                    }
                 }
+               
                 if (BDArmorySettings.DEBUG_OTHER)
                 {
                     Debug.Log($"[BDArmory.CompSettings]: Comp vessel checks loaded");
@@ -110,14 +126,18 @@ namespace BDArmory.Settings
             }
             if (fileNode.HasNode("PartCosts"))
             {
-                CompPriceChecksEnabled = true;
+                string partCostComment = "Set parts and their point cost if pointBuyBudget > 0, e.g. 'bahaGAU-8 = 4'. Any underscores in part names need to be relaced with periods."; // Note: reading the node doesn't seem to get the comment, so we need to reset it each time.
+                if (!fileNode.HasNode("PartCosts"))
+                {
+                    fileNode.AddNode("PartCosts", partCostComment);
+                }
                 ConfigNode settings = fileNode.GetNode("PartCosts");
-
                 foreach (ConfigNode.Value fieldNode in settings.values)
                 {
                     if (float.TryParse(fieldNode.value, out float fieldValue))
                         partPointCosts[fieldNode.name] = fieldValue; // Add or set the override.
                 }
+                if (partPointCosts.Keys.Count > 0) CompPriceChecksEnabled = true;
                 if (BDArmorySettings.DEBUG_OTHER)
                 {
                     Debug.Log($"[BDArmory.CompSettings]: Comp part costs loaded");
@@ -125,11 +145,17 @@ namespace BDArmory.Settings
                     {
                         Debug.Log($"[BDArmory.CompSettings]: {entry.Key}, value {entry.Value} added");
                     }
+                    Debug.Log($"[BDArmory.CompSettings]: {partPointCosts.Keys.Count} parts have a pointCost");
                 }
             }
             if (fileNode.HasNode("PartBlackList"))
             {
-                CompBanChecksEnabled = true;
+                string blacklistComment = "Add parts to limit/ban select parts on a vessel. Identify part via part name, and max quantity that is allowed. If pointBuy is enabled, weapons/missiles not on the pricelist are autoblacklisted. A negative value will whitelist the part, and require it on the vessel in that quantity for the vessel to be legal - e.g. smallOreTank = -2 for a ruleset where the craft must have 2 ore tanks. Use an * for wildcard searches, e.g. baha* = 3 to limit craft to a max of 3 BDA parts";
+                if (!fileNode.HasNode("PartCosts"))
+                {
+                    fileNode.AddNode("PartCosts", blacklistComment);
+                }
+
                 ConfigNode settings = fileNode.GetNode("PartBlackList");
 
                 foreach (ConfigNode.Value fieldNode in settings.values)
@@ -137,6 +163,7 @@ namespace BDArmory.Settings
                     if (float.TryParse(fieldNode.value, out float fieldValue))
                         partBlacklist[fieldNode.name] = fieldValue;
                 }
+                if (partBlacklist.Keys.Count > 0) CompBanChecksEnabled = true;
                 if (BDArmorySettings.DEBUG_OTHER)
                 {
                     Debug.Log($"[BDArmory.CompSettings]: Comp part blacklist loaded");
@@ -144,8 +171,10 @@ namespace BDArmory.Settings
                     {
                         Debug.Log($"[BDArmory.CompSettings]: {entry.Key}, value {entry.Value} added");
                     }
+                    Debug.Log($"[BDArmory.CompSettings]: {partBlacklist.Keys.Count} parts limited/banned");
                 }
             }
+            fileNode.Save(CompSettingsPath);
         }
     }
 }
